--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,139 +5,105 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
-    <string name="title_activity_login">Sign in</string>
-
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
-    <string name="title_activity_basic">BasicActivity</string>
-
-
     <string name="hello_world">Hello world!</string>
-    <string name="bluetooth">bluetooth</string>
+    <string name="bluetooth">蓝牙</string>
     <string name="usb">USB</string>
-    <string name="ethernet">ethernet</string>
-    <string name="print_mode">Print mode</string>
-    <string name="tsc">Label</string>
-    <string name="esc">Receipt</string>
-    <string name="print_text">Print text</string>
-    <string name="print_image">Print bitmap</string>
-    <string name="print_1d_barcode">Print 1D barcode</string>
-    <string name="open">Open port</string>
-    <string name="close">Close port</string>
-    <string name="receive">Received data</string>
-    <string name="query">Query status</string>
-    <string name="init_port_info">Port:undefined Addr:undefined</string>
-    <string name="port">Port:</string>
-    <string name="ok">OK</string>
-    <string name="address">Addr:</string>
-    <string name="port_parameters_wrong">Invalid parameters！</string>
-    <string name="port_parameters_is_not_save">Port parameters is not saved！</string>
+    <string name="ethernet">网口</string>
+    <string name="print_mode">打印模式</string>
+    <string name="tsc">标签</string>
+    <string name="esc">票据</string>
+    <string name="print_text">打印文字</string>
+    <string name="print_image">打印图片</string>
+    <string name="print_1d_barcode">打印一维码</string>
+    <string name="open">打开端口</string>
+    <string name="close">关闭端口</string>
+    <string name="receive">接收的数据</string>
+    <string name="query">查询状态</string>
+    <string name="init_port_info">接口:未设定 地址:不详</string>
+    <string name="port">接口:</string>
+    <string name="address">地址:</string>
+    <string name="port_parameters_wrong">端口参数错误！</string>
+    <string name="port_parameters_is_not_save">端口参数未保存！</string>
     <string name="gprinter001">Printer 001</string>
     <string name="gprinter002">Printer 002</string>
     <string name="gprinter003">Printer 003</string>
     <string name="gprinter004">Printer 004</string>
     <string name="gprinter005">Printer 005</string>
-    <string name="gprinter006">Printer 006</string>
-    <string name="gprinter007">Printer 007</string>
-    <string name="gprinter008">Printer 008</string>
-    <string name="gprinter009">Printer 009</string>
-    <string name="gprinter010">Printer 010</string>
-    <string name="gprinter011">Printer 011</string>
-    <string name="gprinter012">Printer 012</string>
-    <string name="gprinter013">Printer 013</string>
-    <string name="gprinter014">Printer 014</string>
-    <string name="gprinter015">Printer 015</string>
-    <string name="gprinter016">Printer 016</string>
-    <string name="gprinter017">Printer 017</string>
-    <string name="gprinter018">Printer 018</string>
-    <string name="gprinter019">Printer 019</string>
-    <string name="gprinter020">Printer 020</string>
-    <string name="disconnect">disconnect</string>
-    <string name="cut">disconn</string>
-    <string name="cutting">disconnecting</string>
-    <string name="connect">connect</string>
-    <string name="connected">connected</string>
-    <string name="connecting">connecting</string>
-    <string name="port_configuration">Port configuration</string>
-    <string name="bluetooth_is_not_enabled">bluetooth is not enabled</string>
-    <string name="title_paired_devices">Paired</string>
-    <string name="title_other_devices">New</string>
-    <string name="scan">Scan</string>
-    <string name="bluetooth_device_list">Bluetooth device list</string>
-    <string name="select_bluetooth_device">select bluetooth device</string>
-    <string name="none_bluetooth_device_found">none bluetooth device found</string>
-    <string name="none_paired">none paired</string>
-    <string name="refresh_bluetooth_list">refresh bluetooth list</string>
-    <string name="scaning">scaning</string>
-    <string name="usb_info">usb information</string>
-    <string name="refresh_usb_device">refresh usb devices</string>
-    <string name="ip_address">ip:</string>
-    <string name="default_ip_address">192.168.123.100</string>
-    <string name="port_number">port:</string>
-    <string name="default_port_number">9100</string>
-    <string name="bluetooth_address">bluetooth addr： </string>
-    <string name="usb_address">USB： </string>
-    <string name="usb_devices_list">USB devices list</string>
-    <string name="none_usb_device">none usb device connected</string>
-    <string name="current_version">current version</string>
-    <string name="find_new_version">Found new version</string>
-    <string name="whether_or_not_to_update">Update app？</string>
-    <string name="app_update">App update</string>
-    <string name="update">update</string>
-    <string name="not_update">ignore</string>
-    <string name="downloading">Downloading</string>
-    <string name="please_wait">please waiting</string>
-    <string name="download_complated">downloaded</string>
-    <string name="whether_or_not_setup_new_app">Setup new app?</string>
-    <string name="loading">Loading。。。</string>
-    <string name="cancel">Cancel</string>
+    <string name="disconnect">未连接</string>
+    <string name="cut">断开</string>
+    <string name="cutting">断开中</string>
+    <string name="connect">连接</string>
+    <string name="connected">已连接</string>
+    <string name="connecting">连接中</string>
+    <string name="ok">确定</string>
+    <string name="port_configuration">端口设置</string>
+    <string name ="bluetooth_is_not_enabled">蓝牙没有开启</string>
+    <string name = "title_paired_devices">已配对</string>
+    <string name ="title_other_devices">新设备</string>
+    <string name ="scan">扫描</string>
+    <string name ="bluetooth_device_list">蓝牙设备列表</string>
+    <string name ="select_bluetooth_device">选择蓝牙设备</string>
+    <string name ="none_bluetooth_device_found">没有找到蓝牙设备</string>
+    <string name ="none_paired">没有配对的设备</string>
+    <string name ="refresh_bluetooth_list">打开蓝牙设备列表</string>
+    <string name ="scaning">正在扫描。。。</string>
+    <string name ="usb_info">扫描到的设备USB信息</string>
+    <string name ="refresh_usb_device">扫描USB设备</string>
+    <string name ="ip_address">ip:</string>
+    <string name ="default_ip_address">192.168.123.100</string>
+    <string name ="port_number">port:</string>
+    <string name ="default_port_number">9100</string>
+    <string name ="bluetooth_address">蓝牙地址： </string>
+    <string name ="usb_address">USB： </string>
+    <string name ="usb_devices_list">USB设备列表</string>
+    <string name ="none_usb_device">未连接USB打印机</string>
+    <string name="current_version">当前版本</string>
+    <string name="find_new_version">发现新版本</string>
+    <string name="whether_or_not_to_update">是否更新？</string>
+    <string name="app_update">App软件更新</string>
+    <string name="update">更新</string>
+    <string name="not_update">暂不更新</string>
+    <string name="downloading">正在下载</string>
+    <string name="please_wait">请稍后</string>
+    <string name="download_complated">下载完成</string>
+    <string name="whether_or_not_setup_new_app">是否安装新的应用</string>
+    <string name="loading">正在载入。。。</string>
+    <string name="cancel">取消</string>
     <string name="copy_right_en">COPYRIGHT@2014 GPRINTER ALL RIGHTS RESERVERD</string>
     <string name="copy_right_cn">佳博集团 版权所有</string>
 
-    <string name="error_configuration">Please configure your serial port first.</string>
-    <string name="error_security">You do not have read/write permission to the serial
-		port.</string>
-    <string name="error_unknown">The serial port can not be opened for an unknown
-		reason.</string>
-    <string name="str_clear">Clear</string>
-    <string name="str_reset">Reset</string>
-    <string name="str_turn_on_backlight">Turn on backlight</string>
-    <string name="str_turn_off_backlight">Turn off backlight</string>
-    <string name="str_change_contrast">change contrast</string>
-    <string name="str_set_backlight_timeout">Set backlight timeout</string>
-    <string name="str_set_cursor_position">Set cursor position</string>
-    <string name="str_display_bitmap">Display bitmap</string>
-    <string name="str_input_in_current_position">Input in current position</string>
-    <string name="str_input_in_bebind_position">Input in bebind position</string>
-    <string name="str_get_backlight_status">Get backlight</string>
-    <string name="str_get_backlight_timeout">Get backlight timeout</string>
-    <string name="str_update">Update</string>
-    <string name="str_get_cursor_position">Get cursor position</string>
-    <string name="str_get_row_and_column">Get row and column</string>
-    <string name="str_have_been_turn_off_backlight">Display have been turn off backlight</string>
-    <string name="str_set_successful">set successful</string>
-    <string name="str_please_input_x_y">Please input x coordinate and y coordinate</string>
-    <string name="str_input_display_timeout">Please input turn off display timeout</string>
-    <string name="str_no_permission">No permission to do it</string>
-    <string name="str_ok">ok</string>
-    <string name="str_contrast">contrast</string>
-    <string name="str_set_contrast">Set contrast:</string>
-    <string name="str_set_brightness">Set brightness:</string>
-    <string name="str_close_port">Close port</string>
-    <string name="str_open_port">Open port</string>
-    <string name="str_port_status">Port status</string>
-    <string name="str_all_black">All black</string>
-    <string name="str_all_white">All White</string>
-    <string name="str_recovery">Recovery</string>
-    <string name="str_us_cn">chlish</string>
+    <string name="error_configuration">请配置你的串口信息</string>
+    <string name="error_security">你没有权限读写端口</string>
+    <string name="error_unknown">位置错误，无法打开端口</string>
+    <string name="str_reset">清屏并重置光标位置</string>
+    <string name="str_turn_on_backlight">打开背光灯</string>
+    <string name="str_turn_off_backlight">关闭背光灯</string>
+    <string name="str_change_contrast">设置对比度</string>
+    <string name="str_set_backlight_timeout">设置屏幕超时时间</string>
+    <string name="str_set_cursor_position">设置光标位置</string>
+    <string name="str_display_bitmap">显示位图</string>
+    <string name="str_input_in_current_position">光标位置输入文字</string>
+    <string name="str_input_in_bebind_position">光标后输入文字</string>
+    <string name="str_get_backlight_status">获取背光灯状态</string>
+    <string name="str_get_backlight_timeout">获取背光灯超时状态</string>
+    <string name="str_get_cursor_position">获取光标位置</string>
+    <string name="str_get_row_and_column">获取客显行列数量</string>
+    <string name="str_have_been_turn_off_backlight">已关闭了背光灯</string>
+    <string name="str_set_successful">设置成功</string>
+    <string name="str_please_input_x_y">请输入X坐标与Y坐标</string>
+    <string name="str_input_display_timeout">请输入背光灯超时时间</string>
+    <string name="str_no_permission">没有权限去操作</string>
+    <string name="str_ok">确定</string>
+    <string name="str_contrast">对比度</string>
+    <string name="str_set_contrast">设置对比度:</string>
+    <string name="str_set_brightness">设置亮度:</string>
+    <string name="str_clear">清屏</string>
+    <string name="str_open_port">打开端口</string>
+    <string name="str_close_port">关闭端口</string>
+    <string name="str_port_status">端口状态</string>
+    <string name="str_update">更新客显程序</string>
+    <string name="str_all_black">全黑测试</string>
+    <string name="str_us_cn">中英文显示</string>
+    <string name="str_recovery">恢复</string>
+    <string name="str_all_white">全白测试</string>
 </resources>
